# claude-frugal-agents

./: .gitignore  CASE_STUDY.md  README.md  pyproject.toml
examples/form_filler_demo/: README.md  demo_form.html  expected_output.txt  run_demo.py
src/claude_frugal_agents/: __init__.py  answer_cache.py  browser_helpers.py  keyword_scorer.py  monitor.py  scraper_base.py  validator.py  watchdog.py  zombie_cleanup.py
tests/: test_answer_cache.py  test_keyword_scorer.py  test_scraper_base.py  test_validator.py  test_watchdog.py
