[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-frugal-agents"
version = "0.1.0"
description = "Production patterns for building Claude agents that don't waste tokens. Battle-tested on a real 52-application browser-automation pipeline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hritik Tiwari" }]
keywords = [
    "claude",
    "anthropic",
    "agent",
    "llm",
    "browser-automation",
    "playwright",
    "mcp",
    "cost-optimization",
    "token-efficiency",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "psutil>=5.9",
    "rich>=13.0",
]

[project.optional-dependencies]
example = [
    "anthropic>=0.25",
    "playwright>=1.40",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/hritik-tiwari/claude-frugal-agents"
Issues = "https://github.com/hritik-tiwari/claude-frugal-agents/issues"
Repository = "https://github.com/hritik-tiwari/claude-frugal-agents"

[project.scripts]
cfa-zombie-cleanup = "claude_frugal_agents.zombie_cleanup:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
